<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sync_account_type" translatable="false">today.gcgamecore.com</string>
    <string name="content_authority" translatable="false">com.gcgamecore.today.free</string>
    <string name="app_name" translatable="false">ToDay</string>
    <string name="string_archive">Topics</string>
    <string name="string_quiz">Buy</string>
    <string name="string_favorite">Favorite</string>
    <string name="string_action">Events</string>
    <string name="locale">eng</string>
    <string name="No_information_available">There is no data</string>
    <string name="SUNDAY">Sunday</string>
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="empty_theme">There is no questions for today</string>
    <string name="questionsCount">Total amount of \nQuestions</string>
    <string name="rightAnswers">Right \nanswers</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="finish_round_description">You answered correctly on %s question(s).</string>
    <string name="exit_mesage">Are you sure you want to quit the game?</string>
    <string name="exit_button">Yes</string>
    <string name="cancel_button">No</string>
    <string name="winner_text">RIGHT!</string>
    <string name="looser_text">WRONG!</string>
    <string name="finish">FINISH</string>
    <string name="how_much_time_do_you_have">How much time do you have?</string>
    <string name="no_questions_string">There are no questions yet :(</string>
    <string name="success_add_to_fav">The question was added to favorites.</string>
    <string name="delete_from_favorite">The question was deleted from favorites.</string>
    <string name="new_theme_notification">You have new questions for ToDay.</string>
    <string name="No_information_available_for_favorite">You have added no questions to favorites yet</string>
    <string name="No_information_available_in_events">There is no new events.</string>
    <string name="exit_from_game">Exit</string>
</resources>
