<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gcgamecore.today.MainActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/time_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ToDayColorGray"
        android:orientation="vertical"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="FRIDAY, MARCH , 2017"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_clock_on_top" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="17:00"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="-12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/rl_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="false"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_home_black_24dp" />

                <Button
                    android:id="@+id/btn_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="false"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:textColor="@color/ToDayColorWhite" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_archive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/btn_archive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="false"
                    android:background="@android:color/transparent"
                    android:text="@string/string_archive"
                    android:textAllCaps="false"
                    android:textColor="@color/ToDayColorWhite"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_favorite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:text="@string/string_favorite"
                    android:textAllCaps="false"
                    android:textColor="@color/ToDayColorWhite"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_action"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:clipChildren="false">

                <Button
                    android:id="@+id/btn_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:text="@string/string_action"
                    android:textAllCaps="false"
                    android:textColor="@color/ToDayColorWhite"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_quiz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:visibility="visible"
                android:background="@color/ToDayColorRed">

                <Button
                    android:id="@+id/btn_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:text="@string/string_quiz"
                    android:textAllCaps="false"
                    android:textColor="@color/ToDayColorWhite"
                    android:textSize="12sp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="100dp"
            android:id="@+id/newActions">

            <View android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/circle"/>

            <TextView
                android:id="@+id/textViewGameCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textColor="@color/ToDayColorBlack"
                android:layout_centerInParent="true" />

        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>
